fix(header): removed the contrast

--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,6 @@ body {
   background-size: cover;
   background-position: center;
   min-height: 100vh;
-  filter: contrast(70%);
   display:flex;
   flex-direction: column;
   justify-content: space-around;
